--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1145,7 +1145,7 @@
                                             進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">規劃內容</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
@@ -1184,7 +1184,7 @@
                                     進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">規劃內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
@@ -1414,7 +1414,7 @@
                                 確認視覺稿後，進行前端切版製作初步原型。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="website/travel_activity/page.html" target="_blank">原型展示(RWD前端切版)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="website/travel_activity/page.html" target="_blank">實行性原型(RWD前端切版)</a></span>
                             </div>
                         </div>
                     </div>
