--- a/uiux_index.html
+++ b/uiux_index.html
@@ -178,9 +178,9 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice" style="display:none;">
-                    <div><a href="#p3">職能概貌</a></div>
-                    <div><a href="#p4">專長技能</a></div>
-                    <div><a href="#p5">職涯與規劃</a></div>
+                    <div id="t1_1"><a href="#p3">職能概貌</a></div>
+                    <div id="t1_2"><a href="#p4">專長技能</a></div>
+                    <div id="t1_3"><a href="#p5">職涯與規劃</a></div>
                 </div>
             </div>
             <div class="page_list_item">
@@ -189,11 +189,11 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice">
-                    <div><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
-                    <div><a href="#p8">元大期貨槓桿&nbsp;官方網站</a></div>
-                    <div><a href="#p9">裕隆集團&nbsp;員工資訊APP&amp;管理後台</a></div>
-                    <div><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
-                    <div><a href="#p11">泰安產物&nbsp;行銷活動網頁</a></div>
+                    <div id="t1_4"><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
+                    <div id="t1_5"><a href="#p8">元大期貨槓桿&nbsp;官方網站</a></div>
+                    <div id="t1_6"><a href="#p9">裕隆集團&nbsp;員工資訊APP&amp;管理後台</a></div>
+                    <div id="t1_7"><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
+                    <div id="t2_1"><a href="#p11">泰安產物&nbsp;行銷活動網頁</a></div>
                 </div>
             </div>
             <div class="page_list_item">
@@ -202,7 +202,7 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice">
-                    <div><a href="#p13">oloo共享交通&nbsp;UXR市場研究案</a></div>
+                    <div id="t2_2"><a href="#p13">oloo共享交通&nbsp;UXR市場研究案</a></div>
                 </div>
             </div>
             <div class="page_list_item">
@@ -211,8 +211,8 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice" style="display:none;">
-                    <div><a href="#p15">專案能力描述</a></div>
-                    <div><a href="#p16">聯絡作者</a></div>
+                    <div id="t2_3"><a href="#p15">專案能力描述</a></div>
+                    <div id="t2_4"><a href="#p16">聯絡作者</a></div>
                 </div>
             </div>
         </div>
@@ -260,15 +260,15 @@
                         <ul class="page_catalog_part_list">
                             <li>
                                 <div class="list_page_name">職能概貌</div>
-                                <div class="list_line"></div><a href="#p3" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">3</a>
+                                <div class="list_line"></div><a id="t2_5" href="#p3" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">3</a>
                             </li>
                             <li>
                                 <div class="list_page_name">專長技能</div>
-                                <div class="list_line"></div><a href="#p4" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">4</a>
+                                <div class="list_line"></div><a id="t2_6" href="#p4" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">4</a>
                             </li>
                             <li>
                                 <div class="list_page_name">職涯與規劃</div>
-                                <div class="list_line"></div><a href="#p5" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">5</a>
+                                <div class="list_line"></div><a id="t3_1" href="#p5" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">5</a>
                             </li>
                         </ul>
                     </div>
@@ -277,35 +277,35 @@
                         <ul class="page_catalog_part_list">
                             <li>
                                 <div class="list_page_name">永豐銀行&nbsp;網路投保網站</div>
-                                <div class="list_line"></div><a href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
+                                <div class="list_line"></div><a id="t3_2" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">內容規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
-                                <div class="list_line"></div><a href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
+                                <div class="list_line"></div><a id="t3_3" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">介面&amp;視覺設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">裕隆集團&nbsp;<br>員工資訊APP&amp;管理後台</div>
-                                <div class="list_line"></div><a href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
+                                <div class="list_line"></div><a id="t3_4" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">內容規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
-                                <div class="list_line"></div><a href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
+                                <div class="list_line"></div><a id="t3_5" href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">產品提案&nbsp;→&nbsp;介面&amp;視覺設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">泰安產物&nbsp;活動網頁</div>
-                                <div class="list_line"></div><a href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
+                                <div class="list_line"></div><a id="t3_6" href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">視覺設計&nbsp;→&nbsp;原型製作</div>
@@ -317,7 +317,7 @@
                         <ul class="page_catalog_part_list">
                             <li>
                                 <div class="list_page_name">oloo共享交通&nbsp;UXR市場研究案</div>
-                                <div class="list_line"></div><a href="#p13" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">13</a>
+                                <div class="list_line"></div><a id="t3_7" href="#p13" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">13</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">定義議題→訪談調查→論述洞見</div>
@@ -329,11 +329,11 @@
                         <ul class="page_catalog_part_list">
                             <li>
                                 <div class="list_page_name">專案能力描述</div>
-                                <div class="list_line"></div><a href="#p15" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">15</a>
+                                <div class="list_line"></div><a id="t4_1" href="#p15" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">15</a>
                             </li>
                             <li>
                                 <div class="list_page_name">聯絡作者</div>
-                                <div class="list_line"></div><a href="#p16" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">16</a>
+                                <div class="list_line"></div><a id="t4_2" href="#p16" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">16</a>
                             </li>
                         </ul>
                     </div>
@@ -978,7 +978,7 @@
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>易用性測試<span></span>
                             </div>
                             <div class="work_info_subtext">
-                                與前端工程師合作完成<span class="sino_works_6_btn pup_info_link">實行性原型</span>，依目標客群條件招募受訪者，根據模擬情境取得使用反饋。
+                                與前端工程師合作完成<span class="sino_works_6_btn pup_info_link" id="t5_6">實行性原型</span>，依目標客群條件招募受訪者，根據模擬情境取得使用反饋。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
@@ -1504,7 +1504,7 @@
                         <div class="work_info_text">
                             <span class="work_info_text_p font_bold">起因</span>
                             <div class="work_info_subtext" style="padding-left:10px;">
-                                <a href="https://oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank">「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
+                                <a id="t4_3" href="https://oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank" id="t4_4" >「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
                             </div>
                             <span class="work_info_text_p font_bold" style="margin-top:15px;">目標客群</span>
                             <ul>
@@ -1614,7 +1614,7 @@
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_3.html">實作內容</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="id="t5_7""><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
                                 </div>
                             </div>
                             <div class="pup_link_area" style="margin-top:10px;">
@@ -1831,7 +1831,7 @@
                                             <li>電子信箱：a52363037@yahoo.com.tw</li>
                                             <li>
                                                 <span class="font_bold">
-                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank">第二頁.pdf</a>
+                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank" id="t4_5">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank" id="t5_1" >第二頁.pdf</a>
                                                 </span>
                                             </li>
                                         </ul>
@@ -1844,7 +1844,7 @@
                                     <div style="margin-bottom:10px;padding-left:15px;">8項選擇題(4題必填)、4項問答題(非必填)</div>
                                     <div class="work_info_subtext" style="padding-left:17px;">
                                         <ul>
-                                            <li><span class="font_bold"><a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform?usp=header" target="_blank">Google線上表單</a></span></li>
+                                            <li><span class="font_bold"><a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform?usp=header" target="_blank" id="t5_2" >Google線上表單</a></span></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1889,13 +1889,13 @@
             <div class="pup_window_small_subtitle">選擇您目前的螢幕解析度</div>
         </div>
         <div class="pup_window_small_content">
-            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=0-1&node-type=canvas&viewport=126%2C-364%2C0.02&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=11%3A6036" target="_blank">
+            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=0-1&node-type=canvas&viewport=126%2C-364%2C0.02&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=11%3A6036" target="_blank" id="t5_3">
                 <div class="pup_window_small_option">寬1920px<img src="images/arrow-left-link.png"></div>
             </a>
-            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=32-16553&node-type=canvas&viewport=340%2C316%2C0.02&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=237%3A268067" target="_blank">
+            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=32-16553&node-type=canvas&viewport=340%2C316%2C0.02&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=237%3A268067" target="_blank" id="t5_4">
                 <div class="pup_window_small_option">寬1440px<img src="images/arrow-left-link.png"></div>
             </a>
-            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=237-267666&node-type=canvas&viewport=16940%2C27766%2C0.27&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=237%3A844289" target="_blank">
+            <a href="https://www.figma.com/proto/wEkauSXWPLMvw6jZQfmbXR/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_prototype-%E6%A1%8C%E6%A9%9F?node-id=237-267666&node-type=canvas&viewport=16940%2C27766%2C0.27&t=gjPWu2OTWDAh27AY-0&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=237%3A844289" target="_blank" id="t5_5">
                 <div class="pup_window_small_option">寬1366px<img src="images/arrow-left-link.png"></div>
             </a>
         </div>
