--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">點擊「留言」圖示按鈕，直接開啟彈跳視窗，給予進行回覆。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">點擊「留言」圖示按鈕，開啟彈跳視窗給予回覆。</span></div>
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
