--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -111,7 +111,7 @@
                                         <div class="text_item">
                                             <ul class="text_item_list" style="list-style:decimal">
                                                 <li>依figma設計規範中圖層名稱，同步Html標籤class樣式名稱。</li>
-                                                <li>使用figma&nbsp;autolayout排版，使視覺搞圖層與Html巢狀寫法一致。</li>
+                                                <li>使用figma&nbsp;autolayout排版，使視覺稿圖層與Html巢狀寫法一致。</li>
                                             </ul>
                                             <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">
                                                 以頁面頂部條為例
@@ -138,10 +138,10 @@
                                         <div class="text_item">
                                             <div class="text_item_title h6 emphasize_text">巢狀特性</div>
                                             <div class="pup_normal_text">
-                                                依SCSS為巢狀寫法特性，使視覺稿圖層、Html、SCSS能同步巢狀形式，使開發、維運工作增加執行效率。
+                                                利用SCSS巢狀寫法，使視覺稿圖層、Html、SCSS能同步巢狀形式，使開發、維運工作增加執行效率。
                                             </div>
                                             <div class="pup_normal_text_small" style="margin-top:20px;margin-bottom:5px;">
-                                                以頁面頂部條為例
+                                                以頁面頂部條SCSS為例
                                             </div>
                                             <div>
                                                 <picture>
