--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -167,7 +167,7 @@
                                     <div class="text_row">
                                         <div class="text_item">
                                             <div class="text_item_title h6 font_bold emphasize_text">一、人物誌</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">來源於測試前所填寫背景資料問卷、訪談相關產品的使用經驗和習慣。</div>
+                                            <div class="pup_normal_text_small emphasize_text" style="margin-bottom:5px;">測試前填寫背景資料問卷、訪談相關產品的使用經驗和習慣。</div>
                                             <div>
                                                 <picture>
                                                     <source media="(max-width:768px)" srcset="images/sino_pic_14-1-768.png" />
@@ -182,7 +182,7 @@
                                     <div class="text_row">
                                         <div class="text_item">
                                             <div class="text_item_title h6 font_bold emphasize_text">二、使用旅程</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">來源於測試時複盤的回饋。</div>
+                                            <div class="pup_normal_text_small emphasize_text" style="margin-bottom:5px;">測試時複盤的回饋。</div>
                                             <div>
                                                 <picture>
                                                     <source media="(max-width:768px)" srcset="images/sino_pic_14-2-768.png" />
@@ -292,7 +292,7 @@
                         <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6">以改善痛點為優先考量，在現有開發進度中提出行動建議。</div>
+                                    <div class="text_item_title h6">以改善痛點為優先考量，在開發進度中提出行動建議。</div>
                                     <div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_14-3-768.png" />
@@ -511,7 +511,7 @@
                                     <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">
                                         <span class="emphasize_text">行動建議</span>
                                         <ul class="text_item_list" style="list-style:disc">
-                                            <li>行動A：將受測者回饋，反應於永豐業務單位。。</li>
+                                            <li>行動A：將受測者回饋，反應於永豐業務單位。</li>
                                             <li>行動B1：在保險專有名詞、資訊附加「提示說明」圖示按鈕，點擊後，顯示說明視窗，。</li>
                                             <li>行動B2：以Google&nbsp;NotebookLM模式，將AI應答功能串接至網站，使用者能於視窗介面詢問而得到回答。</li>
                                             <li>行動C：將條款文件集中，讓使用者能一次瀏覽。</li>
