--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -95,7 +95,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_normal_text">
-                            訪談裕隆相關單位，<span class="emphasize_text">了解APP製作起因、大致資料項目、過往作業流程和表單內容</span>，接續規劃內容、統整操作流程、規劃功能機制。
+                            訪談裕隆相關單位，<span class="emphasize_text">了解APP製作起因、大致資料項目、過往作業流程和表單內容</span>，接續規劃操作流程、功能機制。
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                             <div class="text_row">
                                 <div class="text_item">
                                     <div class="text_item_title h6 emphasize_text">理念：</div>
-                                    <div class="pup_normal_text">幫助集團與員工(使用者)能更加貼近、相互契合，讓產品成為集團營運的一股助力。</div>
+                                    <div class="pup_normal_text">幫助集團與員工(使用者)能更加貼近、相互契合，讓員工APP成為集團營運的一股助力。</div>
                                 </div>
                             </div>
                         </div>
