--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -96,7 +96,7 @@
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text font_bold">1.頻率高、即時性高的操作</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化操作提示、簡化操作流程為設計方向。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化提示、簡化流程為設計方向。</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:0px;">如：員工福利「回覆留言」的操作機制，<br /><span class="emphasize_text">當該福利項目有留言未回覆，顯示「圖示按鈕」給予提示。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text font_bold">2.頻率低、重要性高的操作</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化操作提示、給予完整操作介面為設計方向。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化提示、給予完整操作介面為設計方向。</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:0px;">如：管理員工福利「處理申請紀錄」的操作機制，<br /><span class="emphasize_text">當該福利項目申請時間結束，顯示申請數提示。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
@@ -147,7 +147,7 @@
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>因福利項目不同，申請所需填寫的資料也有所差異，<br/>為滿足這方面需求，並降低製作成本和開發可行性，了解常見的業務情境後，在介面與資料取用上提出執行方案。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:20px;"><span>因福利項目不同，申請資料的填寫也有所差異。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -166,14 +166,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">為能有彈性的設置表單，於後台製作功能介面給予操作。</span><br/><span class="pup_normal_text_small">*設置後的表單欄位，除前台之外，也同步顯示於後台。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">為能有彈性的設置表單，於後台設置功能介面。</span></div>
                                 <div style="margin-top:20px;">
-                                    <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
-                                        <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2新增福利項目</span>
-                                            <img src="images/yulon_pic_10-25.png" style="max-width:100%">
-                                        </div>
-                                    </div>
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
                                             <span>B3福利項目內容-前台設定&nbsp;編輯模式</span>
@@ -185,15 +179,15 @@
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span style="position:relative;top:-5px;">B2_4新增表單欄位-彈跳視窗<br/>可以選擇欄位的輸入框類型、排序、是否必填和輸入欄位名稱、備住，以達彈性設置表單之需求。</span>
+                                            <span style="position:relative;top:-5px;">B2_4新增表單欄位-彈跳視窗<br/>各項欄位設定，彈性設置申請表單。</span>
                                             <img src="images/yulon_pic_9-14.png" style="max-width:100%">
                                         </div>
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_4新增表單欄位-彈跳視窗(欄位類型：輸入文字、輸入數字)</span>
+                                            <span>B2_4新增表單欄位-彈跳視窗(輸入文字、輸入數字)</span>
                                             <img src="images/yulon_pic_9-15.png" style="max-width:100%">
                                         </div>
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span>B2_4新增表單欄位-彈跳視窗(欄位類型：下拉選單、單選選項、複選選項)</span>
+                                            <span>B2_4新增表單欄位-彈跳視窗(下拉選單、單選選項、複選選項)</span>
                                             <img src="images/yulon_pic_9-17.png" style="max-width:100%">
                                         </div>
                                     </div>
@@ -202,7 +196,7 @@
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
-                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br/>對於常用的欄位項目，透過程式開發「檢核輸入資料」功能，以模組化方式套用欄位，完善申請表單的操作機制(防錯)。</span>
+                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br/>程式開發「檢核輸入資料」，模組化套用欄位，完善申請表單的防錯機制。</span>
                                             <img src="images/yulon_pic_9-19.png" style="max-width:100%">
                                         </div>
                                     </div>
