--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -91,16 +91,16 @@
                     </div>
                     <div class="pup_content_pic" style="margin-top:30px;">
                         <div class="pup_normal_text font_bold" style="margin-bottom:5px;">1.登入頁</div>
-                        <div class="pup_normal_text_small">不好的設計：若依從客戶網站的登入介面設計</div>
+                        <div class="pup_normal_text_small">若依客戶網站的登入介面</div>
                         <picture>
                             <img src="images/gapp_pic_7-1.png" style="max-width:100%">
                         </picture>
                     </div>
                     <div class="pup_text large_text font_bold emphasize_text">
-                        資訊、功能CTA繁多凌亂
+                        資訊、功能CTA繁多
                     </div>
                     <div class="pup_normal_text">
-                        讓使用者(會員登入、忘記密碼、非會員註冊)需專注閱讀，難以輕鬆直覺的選擇操作。
+                        讓使用者需專注閱讀，難以輕鬆直覺的選擇操作。
                     </div>
                     <div class="pup_content_pic" style="margin-top:30px;">
                         <div class="pup_normal_text_small">我的設計：</div>
@@ -113,25 +113,25 @@
                     </div>
                     <div class="pup_normal_text">
                         <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
-                            <li><span class="emphasize_text">依使用情境，規劃版面配置：</span><br />將介面元件和資訊文字，依類型(登入、登入問題、註冊)個別集中、排序區隔，<br />讓使用者能根據需求快速反應操作，減輕閱讀判斷的認知負擔</li>
-                            <li><span class="emphasize_text">將操作需求，分層步驟：</span><br />根據「找尋&nbsp;→&nbsp;選擇&nbsp;→&nbsp;獲得滿足」的使用原則，<br />規劃介面操作「排整CTA按鈕&nbsp;→&nbsp;使用者點選&nbsp;→&nbsp;顯示後續操作」，依此避免同時顯示各類資訊，提升介面易讀性。</li>
+                            <li><span class="emphasize_text">依使用情境，規劃版面配置：</span><br />將介面元件和資訊，依操作目標區份、排序，<br />根據使用需求反應操作，減輕認知負擔</li>
+                            <li><span class="emphasize_text">將需求分層步驟：</span><br />「找尋&nbsp;→&nbsp;選擇&nbsp;→&nbsp;獲得滿足」規劃介面，<br />「CTA按鈕&nbsp;→&nbsp;操作使用&nbsp;→&nbsp;接續顯示操作資訊」避免同時顯示各類資訊。</li>
                         </ul>
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
-                        <div class="pup_normal_text_small">點選「使用者代號的資訊符號」，顯示初始代號提示</div>
+                        <div class="pup_normal_text_small">點擊「使用者代號的資訊符號」顯示提示</div>
                         <picture>
                             <img src="images/gapp_pic_7-2.png" style="max-width:100%">
                         </picture>
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
-                        <div class="pup_normal_text_small">點選「登入遇到困難」，前往登入問題的流程頁面</div>
+                        <div class="pup_normal_text_small">點選「登入遇到困難」，前往登入問題頁面</div>
                         <picture>
                             <img src="images/gapp_pic_6-4.png" style="max-width:100%">
                         </picture>
                     </div>
                     <div class="pup_content_pic" style="margin-top:30px;">
                         <div class="pup_normal_text font_bold" style="margin-bottom:5px;">2.登入身分頁</div>
-                        <div class="pup_normal_text_small">不好的設計：若依從客戶網站的介面設計</div>
+                        <div class="pup_normal_text_small">若依客戶網站的介面設計</div>
                         <picture>
                             <img src="images/gapp_pic_7-3.png" style="max-width:100%">
                         </picture>
@@ -140,7 +140,7 @@
                         功能目標相互混淆
                     </div>
                     <div class="pup_normal_text">
-                        選擇登入與移除身分，是個別獨立的功能目標，若存於同一個介面，容易造成使用認知的混淆，<br />如：依造客戶網站的版本，點擊右箭頭是「選擇登入」還是「前往移除」？
+                        「選擇登入」「移除身分」是獨立的操作目標，若同時顯示易造成混淆，<br />如：客戶網站版本，右箭頭是「選擇登入」或「前往移除」？
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
                         <div class="pup_normal_text_small">我的設計</div>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="pup_normal_text">
                         <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
-                            <li><span class="emphasize_text">切換操作版面：</span><br />將登入和移除(編輯)身分獨立操作，使功能目標明確，提高使用者操作效率。<br /><span class="pup_normal_text_small">*介面更具擴充性。</span></li>
+                            <li><span class="emphasize_text">切換介面：</span><br />將「選擇登入」「移除身分」區分模式，使功能目標明確。</li>
                         </ul>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">二、介面配置具一致性</div>
                     <div class="pup_text large_text">
-                        版面配置、用色邏輯保持相同，<span class="emphasize_text">能直覺複製操作模式，減少認知時間</span>
+                        版面配置、用色邏輯一致，<span class="emphasize_text">減少重複認知時間</span>
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
                         <div class="pup_normal_text font_bold" style="margin-bottom:5px;">首頁為例</div>
@@ -176,9 +176,9 @@
                             <img src="images/gapp_pic_7-4.png" style="max-width:100%">
                         </picture>
                         <div class="pup_normal_text" style="margin-bottom:10px;">
-                            <span class="emphasize_text">在「頁面、主題項目、項目元件」同類型的資訊和功能，版面有固定的對應位置。</span><br />
-                            <span class="pup_normal_text_small">*左上角為名稱，右上角為輔助功能、中間為內容(依序為附註、標題、資訊、備註)，下方為CTA功能按鈕。</span><br />
-                            <span class="emphasize_text">能直覺複製操作模式，減少認知時間。</span><br />
+                            <span class="emphasize_text">固定同類型資訊和功能的版面位置。</span><br />
+                            <span class="pup_normal_text_small">*左上角為名稱，右上角為輔助功能、中間為內容，下方為功能按鈕。</span><br />
+                            <span class="emphasize_text">能操作模式固定，減少認知時間。</span><br />
                         </div>
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
@@ -186,7 +186,7 @@
                             用色邏輯
                         </div>
                         <div class="pup_normal_text" style="margin-bottom:10px;">
-                            顏色功能化，並標準化運用於整體介面。
+                            顏色功能標準化，運用於介面。
                         </div>
                         <picture>
                             <source media="(max-width:1024px)" srcset="images/gapp_pic_7-5-1024.png" />
@@ -199,7 +199,7 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">三、介面意象化</div>
                     <div class="pup_text large_text">
-                        模仿生活的實際物品，使用者能直覺反應元件功能、狀態...等。
+                        模仿實際物品，能直覺反應元件功能、狀態...等。
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
                         <div class="pup_normal_text" style="margin-bottom:5px;">優惠券清單為例</div>
@@ -207,7 +207,7 @@
                             <img src="images/gapp_pic_6-13-4.png" style="max-width:100%">
                         </picture>
                         <div class="pup_normal_text">
-                            如：以撕下存根聯的樣貌，表達已使用的優惠券。
+                            如：以撕下存根聯，表達已使用的優惠券。
                         </div>
                     </div>
                 </div>
@@ -216,12 +216,12 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">四、各裝置版面適配性</div>
                     <div class="pup_text large_text">
-                        使用Figma的Auto&nbsp;layout，能依需求快速審視版面。
+                        使用Figma的Auto&nbsp;layout，依開發需求快速審視版面。
                     </div>
                     <div class="pup_content_pic" style="margin-top:20px;">
                         <div class="pup_normal_text font_bold">登入頁為例</div>
                         <div class="pup_normal_text">
-                            <span class="emphasize_text">須一屏顯示整體介面</span>，提供各手機型號視覺圖進行確認
+                            確認各手機型號<span class="emphasize_text">須一屏顯示整體介面</span>
                         </div>
                         <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;13&nbsp;pro&nbsp;max、Iphone&nbsp;14&nbsp;pro&nbsp;max</div>
                         <picture>
