--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -143,14 +143,14 @@
                             <div class="pup_content_pic_container" style="margin-top:20px;">
                                 <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                     <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />於首頁橫幅廣告設置「立即投保」按鈕。</div>
-                                    <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費金額</span>：<br />保費試算搭配「立即投保」按鈕。</div>
+                                    <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費金額</span>：<br />保費試算搭配「立即投保」按鈕。</div>
                                     <div>
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_13-1-540.png" />
                                             <source media="(max-width:960px)" srcset="images/sino_pic_13-1-768.png" />
                                             <img src="images/sino_pic_13-1.png" class="sino_pic_11">
                                         </picture>
-                                        <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />前往P1_保險商品頁，搭配「立即投保」按鈕。</div>
+                                        <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />前往P1_保險商品頁，搭配「立即投保」按鈕。</div>
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_13-2-540.png" />
                                             <source media="(max-width:960px)" srcset="images/sino_pic_13-2-768.png" />
@@ -180,7 +180,7 @@
                                     </div>
                                 </div>
                                 <div class="pup_content_pic_item" style="text-align:left;">
-                                    <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">2-1.使用者進行保險試算：</span><br />前端紀錄資料</div>
+                                    <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">2-1.使用者進行保險試算，</span>前端紀錄試算資料。</div>
                                     <div class="pup_content_pic_item_content">
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_13-4-540.png" />
@@ -188,7 +188,7 @@
                                             <img src="images/sino_pic_13-4.png" class="sino_pic_11">
                                         </picture>
                                     </div>
-                                    <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">2-2.使用者申請投保時：</span><br />前端載入對應資料，減少再次輸入的時間。</div>
+                                    <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">2-2.使用者申請投保時，</span><br />前端載入對應資料，減少再次輸入的時間。</div>
                                     <div class="pup_content_pic_item_content">
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_13-5-540.png" />
@@ -236,7 +236,7 @@
                                 <div class="pup_content_pic_item" style="text-align:left;">
                                     <div class="pup_normal_text"><span class="emphasize_text">1.主題+符合的插圖。</span></div>
                                     <div class="pup_normal_text_small">如：保費試算依插圖，意識當前試算險種。</div>
-                                    <div class="pup_normal_text"><span class="emphasize_text">2.功能+對應的圖示。</span></div>
+                                    <div class="pup_normal_text" style="margin-top:20px;"><span class="emphasize_text">2.功能+對應的圖示。</span></div>
                                     <div class="pup_normal_text_small">如：險種頁籤依圖示，判斷對應險種。</div>
                                     <div class="pup_content_pic_item_content">
                                         <picture>
@@ -244,7 +244,7 @@
                                             <source media="(max-width:960px)" srcset="images/sino_pic_13-8-768.png" />
                                             <img src="images/sino_pic_13-8.png" class="sino_pic_11">
                                         </picture>
-                                        <div class="pup_normal_text emphasize_text">減少閱讀時間和心智負荷。</div>
+                                        <div class="pup_normal_text emphasize_text">減少閱讀文字時間和負擔。</div>
                                     </div>
                                 </div>
                             </div>
