--- a/uiux_index.html
+++ b/uiux_index.html
@@ -943,11 +943,12 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">規範文件</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">設計亮點</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank">視覺稿、規範文件(figma)</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank">視覺稿、規範文件(figma)</a></span>
+
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">設計亮點</a></span>
                                 </div>
                             </div>
                         </div>
@@ -964,12 +965,12 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="sino_works_5.html">實行性原型說明</a></span>
+                                <span><a href="website/sinopac_web/index.html" target="_blank">實行性原型(前端切版)-首頁範例</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="website/sinopac_web/index.html" target="_blank">實行性原型(前端切版)-首頁範例</a></span>
+                                    <span><a href="sino_works_5.html">實行性原型說明</a></span>
                                 </div>
                             </div>
                         </div>
@@ -982,7 +983,7 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="sino_works_6.html">測試報告</a></span>
+                                <span><a href="sino_works_6.html">測試內容</a></span>
                             </div>
                         </div>
                     </div>
@@ -1504,7 +1505,7 @@
                         <div class="work_info_text">
                             <span class="work_info_text_p font_bold">起因</span>
                             <div class="work_info_subtext" style="padding-left:10px;">
-                                <a id="t4_3" href="https://oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank" id="t4_4" >「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
+                                <a id="t4_3" href="https://oloo.com.tw/about/" target="_blank" title="前往Oloo官方網站">Oloo公司</a>以共享交通服務為營運項目，提供電動滑板車租賃，讓民眾在<a href="https://edesg.com/%E5%BE%AE%E7%A7%BB%E5%8B%95%E7%9B%9B%E8%A1%8C%EF%BC%81%E9%82%A3%E4%BA%9B%E4%BA%A4%E9%80%9A%E5%B7%A5%E5%85%B7%E5%8F%AF%E4%BE%9B%E6%82%A8%E5%90%88%E6%B3%95%E4%BD%BF%E7%94%A8%E5%91%A2%EF%BC%9F/?srsltid=AfmBOopSBaKx6VHnwrHLJ1uZPN1powkqSP7gsdP4915PbjWDDXZgtTf8" title="前往EDESG永續思維網站，了解「微移動」是什麼。" target="_blank" id="t4_4">「微移動」</a>距離中有一項新的選擇；電動滑板車因法規限制，Oloo多以<span class="font_bold">大學為場域</span>落地共享交通服務。<br /><span class="font_bold">為擴大產品營運的可能性，經由Oloo委託發起「展演場區」的市場研究專案。</span>
                             </div>
                             <span class="work_info_text_p font_bold" style="margin-top:15px;">目標客群</span>
                             <ul>
@@ -1601,7 +1602,7 @@
                                 </li>
                                 <li style="margin-top:10px;">
                                     <span class="font_bold">發現洞見：</span><br />
-                                    彙整共六位受訪者訪談的<span class="font_bold">切片內容，以「親合圖」模式察覺有共通性的主題範圍</span>，思考主題當中的切片將有相同的原因、脈絡給予詮釋，和成員以「六頂思考帽」方式進行思辨驗證。<br/>
+                                    彙整共六位受訪者訪談的<span class="font_bold">切片內容，以「親合圖」模式察覺有共通性的主題範圍</span>，思考主題當中的切片將有相同的原因、脈絡給予詮釋，和成員以「六頂思考帽」方式進行思辨驗證。<br />
                                     探討各<span class="font_bold">詮釋中共同的痛點、需求</span>，讓已知事情有新的認識、補充細節，讓未知事情被注意和認知，最後形成研究洞見<span class="font_bold">啟發成商業機會、風險。</span>
                                 </li>
                                 <li style="margin-top:10px;">
@@ -1614,7 +1615,7 @@
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_3.html">實作內容</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="id="t5_7""><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span id="id=" t5_7""><a href="https://drive.google.com/file/d/1j_4-eB7PA6byz0AXoQirV0H5_B0rabhz/view?usp=drive_link" target="_blank">簡報內容.pdf&nbsp;(可公開部分)</a></span>
                                 </div>
                             </div>
                             <div class="pup_link_area" style="margin-top:10px;">
@@ -1831,7 +1832,7 @@
                                             <li>電子信箱：a52363037@yahoo.com.tw</li>
                                             <li>
                                                 <span class="font_bold">
-                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank" id="t4_5">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank" id="t5_1" >第二頁.pdf</a>
+                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank" id="t4_5">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank" id="t5_1">第二頁.pdf</a>
                                                 </span>
                                             </li>
                                         </ul>
@@ -1844,7 +1845,7 @@
                                     <div style="margin-bottom:10px;padding-left:15px;">8項選擇題(4題必填)、4項問答題(非必填)</div>
                                     <div class="work_info_subtext" style="padding-left:17px;">
                                         <ul>
-                                            <li><span class="font_bold"><a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform?usp=header" target="_blank" id="t5_2" >Google線上表單</a></span></li>
+                                            <li><span class="font_bold"><a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform?usp=header" target="_blank" id="t5_2">Google線上表單</a></span></li>
                                         </ul>
                                     </div>
                                 </div>
